@@ -8,6 +8,7 @@ wasn't consistant for 0.1.X builds, though it will be in the future.
 - "koan --xen" now takes an optional "--interactive".  By default
   it won't launch an xm console.  For debugging kickstarts, pass
   in the "--interactive" flag (aliased to "-i").
+- koan now works when no kickstart is assigned to the cobbler profile
 
 * Wed Oct 11 2006 Michael DeHaan <mdehaan@redhat.com> - 0.2.2-1
 - Bundled subprocess to allow it's use under python 2.3 (RHEL4, etc)
